# orge

./: .gitattributes  .gitmodules  CMakeLists.txt  README.md  b.txt  glslang.sh  meson.build  meson_options.txt  orge.pc.in  vcpkg.json
.github/workflows/: build-macos.yml  build-ubuntu.yml  build-windows.yml
cmake/: build-msvc.cmake  build.cmake  create-vulkan-symlink.cmake  create_vulkan_symlink.cmake  get-deps-from-pc.cmake  merge-static-msvc.cmake  merge-static.cmake  merge_static.cmake  merge_static_msvc.cmake  orge.pc.in  orgeConfig.cmake.in  orgestatic.pc.in
docs/: ARCHITECTURE.md  BUILD.md  CODING_CONVENTIONS.md  CONFIG.md  HOW_TO_USE.md
examples/: CMakeLists.txt
examples/audio/: README.md  config.yml  main.cpp  meson.build
examples/compute/: README.md  config.yml  main.cpp  meson.build  shader.comp  shader.comp.spv
examples/cube/: CMakeLists.txt  README.md  config.yml  cube.mesh.v  main.cpp  meson.build  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
examples/dialog/: CMakeLists.txt  README.md  main.cpp  meson.build
examples/input/: CMakeLists.txt  README.md  config.yml  main.cpp  meson.build  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  triangle.mesh.v
examples/multipass/: CMakeLists.txt  README.md  config.yml  integration.frag  integration.frag.spv  integration.vert  main.cpp  mesh.vert  mesh.vert.spv  meson.build  pattern.frag  pattern.frag.spv  pattern.vert  pattern.vert.spv  square.mesh.v
examples/rust/: .gitignore  README.md  build.rs  config.yml  shader.vert.spv
examples/rust/src/: main.rs
examples/sampler/: CMakeLists.txt  README.md  config.yml  main.cpp  meson.build  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
examples/simple/: CMakeLists.txt  README.md  config.yml  main.cpp  meson.build
examples/text/: README.md  config.yml  main.cpp  meson.build  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
examples/triangle/: CMakeLists.txt  README.md  colored-triangle.mesh.v  config.yml  main.cpp  meson.build  shader.frag
include/: orge.h  orge.hpp
include-internal/: assetdef.hpp  compile.sh  text-shader-frag-spv.cpp  text-shader-vert-spv.cpp  text-shader.frag  text-shader.frag.spv  text-shader.vert  text-shader.vert.spv
include/orge/: audio.h  compute.h  dialog.h  input.h  orge.h  rendering.h  resource.h  text.h  window.h
meson/: install_linux.py  install_macos.py  install_windows.py
scripts/: install_linux.py  install_macos.py  install_windows.py  list_sources.py  setup-vcpkg.bat
src/: config.cpp  config.hpp  error.cpp  error.hpp  lib.cpp  orge-audio.cpp  orge-compute.cpp  orge-graphics.cpp  orge-input.cpp  orge-private.cpp  orge-private.hpp  orge.cpp
src/api/: audio.hpp  compute.hpp  dialog.hpp  dispatch.hpp  input.hpp  lifetime.hpp  rendering.hpp  resource.hpp  text.hpp  window.hpp
src/asset/: asset.cpp  asset.hpp
src/audio/: _stb_vorbis.h  audio.cpp  audio.hpp  wave.cpp  wave.hpp
src/config/: attachment.cpp  attachment.hpp  compute.cpp  compute.hpp  config.cpp  config.hpp  dependency.cpp  dependency.hpp  enumconvert.hpp  font.cpp  font.hpp  mesh.cpp  mesh.hpp  pipeline.cpp  pipeline.hpp  renderpass.cpp  renderpass.hpp  subpass.cpp  subpass.hpp  utils.hpp
src/error/: error.cpp  error.hpp  vulkan.hpp
src/graphics/: buffer.cpp  buffer.hpp  character.hpp  charatlus.cpp  charatlus.hpp  charlru.hpp  core.cpp  core.hpp  descpool.cpp  descpool.hpp  framebuffer.cpp  framebuffer.hpp  graphics.cpp  graphics.hpp  image.cpp  image.hpp  mesh.cpp  mesh.hpp  pipeline.cpp  pipeline.hpp  platform.cpp  platform.hpp  renderer.cpp  renderer.hpp  rendering.cpp  rendering.hpp  swapchain.cpp  swapchain.hpp  utils.cpp  utils.hpp  window.cpp  window.hpp
src/graphics/compute/: pipeline.cpp  pipeline.hpp  pipelines.cpp
src/graphics/core/: core.cpp  core.hpp
src/graphics/mesh/: mesh.cpp  mesh.hpp
src/graphics/pipeline/: buffer.cpp  buffer.hpp  config.cpp  config.hpp  image.cpp  image.hpp
src/graphics/renderer/: context.hpp  renderer.cpp  renderer.hpp
src/graphics/rendering/: rendering.cpp  rendering.hpp
src/graphics/rendering/framebuffer/: framebuffer.cpp  framebuffer.hpp
src/graphics/rendering/mesh/: mesh.cpp  mesh.hpp
src/graphics/rendering/pipeline/: config.cpp  config.hpp  pipeline.cpp  pipeline.hpp
src/graphics/rendering/pipeline/buffer/: buffer.cpp  buffer.hpp
src/graphics/rendering/pipeline/image/: image.cpp  image.hpp
src/graphics/rendering/pipeline/sampler/: sampler.cpp  sampler.hpp
src/graphics/rendering/swapchain/: swapchain.cpp  swapchain.hpp
src/graphics/renderpass/: framebuffer.cpp  framebuffer.hpp  pipeline-temp.cpp  pipeline-temp.hpp  pipeline-text.cpp  pipeline-text.hpp  pipeline-user.cpp  pipeline-user.hpp  pipeline-utils.hpp  pipeline.cpp  pipeline.hpp  renderpass.cpp  renderpass.hpp  subpass.hpp
src/graphics/resource/: buffer.cpp  buffer.hpp  charatlus-char.hpp  charatlus-lru.cpp  charatlus-lru.hpp  charatlus.cpp  charatlus.hpp  descpool.cpp  descpool.hpp  image-attachment.cpp  image-attachment.hpp  image-storage.cpp  image-storage.hpp  image-user.cpp  image-user.hpp  image.cpp  image.hpp  mesh.cpp  mesh.hpp  sampler.cpp  sampler.hpp
src/graphics/text/: layout.cpp  rasterize.cpp  text.cpp  text.hpp
src/graphics/window/: swapchain.cpp  swapchain.hpp
src/input/: input.cpp  input.hpp
triplets/: custom-arm64-osx.cmake  custom-x64-linux.cmake  custom-x64-windows-shared.cmake  custom-x64-windows-static.cmake  custom-x64-windows.cmake
