option('vcpkg_root', type: 'string', value: '', description: 'vcpkg root directory path')
option('enable_vvl', type: 'boolean', value: false, description: 'enable Vulkan Validation Layers')
option('build_examples', type: 'boolean', value: false, description: 'build all examples')
option('build_example_simple', type: 'boolean', value: false)
option('build_example_dialog', type: 'boolean', value: false)
option('build_example_triangle', type: 'boolean', value: false)
option('build_example_cube', type: 'boolean', value: false)
option('build_example_input', type: 'boolean', value: false)
option('build_example_sampler', type: 'boolean', value: false)
option('build_example_multipass', type: 'boolean', value: false)
option('build_example_audio', type: 'boolean', value: false)
option('build_example_text', type: 'boolean', value: false)
option('build_example_compute', type: 'boolean', value: false)
