executable('audio',
  'main.cpp',
  dependencies: orge_dep,
  cpp_args: example_cpp_args,
  install: false
)

configure_file(
  input: 'config.yml',
  output: 'config.yml',
  copy: true,
  install: false
)
configure_file(
  input: 'cdefgabc.wav',
  output: 'cdefgabc.wav',
  copy: true,
  install: false
)
