executable('multipass',
  'main.cpp',
  dependencies: orge_dep,
  cpp_args: example_cpp_args,
  install: false
)

configure_file(
  input: 'config.yml',
  output: 'config.yml',
  copy: true,
  install: false
)
configure_file(
  input: 'mesh.vert.spv',
  output: 'mesh.vert.spv',
  copy: true,
  install: false
)
configure_file(
  input: 'mesh.frag.spv',
  output: 'mesh.frag.spv',
  copy: true,
  install: false
)
configure_file(
  input: 'pattern.vert.spv',
  output: 'pattern.vert.spv',
  copy: true,
  install: false
)
configure_file(
  input: 'pattern.frag.spv',
  output: 'pattern.frag.spv',
  copy: true,
  install: false
)
configure_file(
  input: 'integration.vert.spv',
  output: 'integration.vert.spv',
  copy: true,
  install: false
)
configure_file(
  input: 'integration.frag.spv',
  output: 'integration.frag.spv',
  copy: true,
  install: false
)
