executable('sampler',
  'main.cpp',
  dependencies: orge_dep,
  install: false
)

configure_file(
  input: 'config.yml',
  output: 'config.yml',
  copy: true,
  install: false
)
configure_file(
  input: 'shader.vert.spv',
  output: 'shader.vert.spv',
  copy: true,
  install: false
)
configure_file(
  input: 'shader.frag.spv',
  output: 'shader.frag.spv',
  copy: true,
  install: false
)
