add_executable(simple main.cpp)
if(TARGET orge::orge)
	target_link_libraries(simple PRIVATE orge::orge)
elseif(TARGET orge::orgestatic)
	target_link_libraries(simple PRIVATE orge::orgestatic)
	# NOTE: MSVCでは/MTを指定
	if(MSVC)
		set_target_properties(simple PROPERTIES MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
	endif()
endif()
