executable('text',
  'main.cpp',
  dependencies: orge_dep,
  cpp_args: example_cpp_args,
  install: false
)

configure_file(
  input: 'config.yml',
  output: 'config.yml',
  copy: true,
  install: false
)
configure_file(
  input: 'shader.vert.spv',
  output: 'shader.vert.spv',
  copy: true,
  install: false
)
configure_file(
  input: 'shader.frag.spv',
  output: 'shader.frag.spv',
  copy: true,
  install: false
)
configure_file(
  input: 'MPLUS1p-Regular.ttf',
  output: 'MPLUS1p-Regular.ttf',
  copy: true,
  install: false
)
