executable('text',
  'main.cpp',
  dependencies: orge_dep,
  cpp_args: example_cpp_args,
  install: false
)

configure_file(
  input: 'config.yml',
  output: 'config.yml',
  copy: true,
  install: false
)
configure_file(
  input: 'MPLUS1p-Light.ttf',
  output: 'MPLUS1p-Light.ttf',
  copy: true,
  install: false
)
